# 15PuzzleExternalMemorySearch

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  makeall.bash  makeall.sh  makeoptimal.sh
array1d/: heap.hpp
array2d/: astar.hpp  astar_ddd.hpp  compress_astar.hpp  external_astar.hpp  fatal.cc  heap.hpp  main.cc  makefile  node.hpp  tiles  tiles.cc  tiles.hpp
base/: astar.hpp  tiles.cc  tiles.hpp
closed/: .start.swp  astar.hpp  astar.hpp.hgmerge  fatal.cc  hashtbl.hpp  heap.hpp  main.cc  search.hpp
closedopt/: astar.hpp  heap.hpp  makefile  pool.hpp
incrmd/: 12  fatal.hpp  hashtbl.hpp  tiles.cc  tiles.hpp
inplace/: astar.hpp  idastar.hpp  search.hpp  tiles.hpp
intrusive/: astar.hpp  heap.hpp  search.hpp
optab/: idastar.hpp  tiles.hpp
packed/: astar.hpp  hashtbl.hpp  heap.hpp  tiles.hpp
poolalloc/: astar.hpp  idastar.hpp  utils.hpp
src/: CMakeLists.txt  astar.hpp  astar_ddd.hpp  astar_pidd.hpp  compress_astar.hpp  external_astar.hpp  hashtbl.hpp  heap.hpp  main.cc  node.hpp  search.hpp  tiles.cc  tiles.hpp
src/astar_ddd/: astar_ddd_open_list.hpp
src/compress/: CMakeLists.txt  compress_closed_list.hpp  compress_closed_list_async.hpp  compress_open_list.hpp  mapping_table.hpp  pointer_table.cc  pointer_table.hpp
src/external_astar/: external_astar_open_list.hpp
src/hash_functions/: tabulation_hash.hpp
src/hash_functions/test/: main.cpp
src/utils/: CMakeLists.txt  compunits.hpp  errors.hpp  memory.hpp  named_fstream.cc  named_fstream.hpp  scoped_thread.hpp  wall_timer.cc  wall_timer.hpp
templates/: astar.hpp  tiles.cc  tiles.hpp  (+1 more)
(+13 files in other folders)
